# front/src/main/java/com/example/front/controller/ClientController.java
@@ -1,10 +1,8 @@
 package com.example.front.controller;
 
-import com.example.front.adapter.ClientAdapterToDto;
-import com.example.front.mapper.ClientMapper;
 import com.example.front.service.ClientService;
-import feignClientDemo.front.api.SimpleApi;
-import feignClientDemo.front.dto.*;
+import feignClientShop.front.api.ClientApi;
+import feignClientShop.front.dto.*;
 import io.swagger.annotations.Api;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -12,35 +10,37 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 
+
 @RestController
 @Api(tags = {"client"})
 @RequiredArgsConstructor
-public class ClientController implements SimpleApi {
+public class ClientController implements ClientApi {
 
-    private final ClientAdapterToDto clientAdapterToDto;
+    private final ClientService clientService;
 
     @Override
     public ResponseEntity<ClientPostResultDto> addClient(ClientPostDto clientPostDto) {
-        return ResponseEntity.ok(clientAdapterToDto.addClient(clientPostDto));
+        return ResponseEntity.ok(clientService.addClient(clientPostDto));
     }
+
 
     @Override
     public ResponseEntity<String> deleteClient(Long id) {
-        return ResponseEntity.ok(clientAdapterToDto.deleteClient(id));
+        return ResponseEntity.ok(clientService.deleteClient(id));
     }
 
     @Override
     public ResponseEntity<List<ClientGetResultDto>> getAll() {
-        return ResponseEntity.ok(clientAdapterToDto.getAllClients());
+        return ResponseEntity.ok(clientService.getAllClients());
     }
 
     @Override
     public ResponseEntity<ClientGetResultDto> getById(Long id) {
-        return ResponseEntity.ok(clientAdapterToDto.getClient(id));
+        return ResponseEntity.ok(clientService.getClientById(id));
     }
 
     @Override
     public ResponseEntity<ClientUpdateResultDto> updateClient(ClientUpdateDto clientUpdateDto) {
-        return ResponseEntity.ok(clientAdapterToDto.updateClient(clientUpdateDto));
+        return ResponseEntity.ok(clientService.updateClient(clientUpdateDto));
     }
 }
